--- a/user account.html
+++ b/user account.html
@@ -13,7 +13,7 @@
 <body>
 <div class="header">
    <div>
-	<img src="images/logo.png" alt="logo" class="logo">
+	<img src="images/cpc.png" alt="logo" class="logo">
 	</div>
 	<div class="buttons">
 	<button class="button">Login</button>
@@ -23,11 +23,10 @@
 
 <div id="navbar">
       <a href="">Home</a>
-	  <a href="">Book a ride</a>
-      <a href="">Contact us</a>
+	  <a href="">Orders</a>
+	  <a href="">Products</a>
 	  <a href="">About us</a>
-	  <a href="">Carriers</a>
-	  <a href="">Promo</a>
+	  <a href="">Contact Us</a>
 	  <a href="join.html">Join with us</a>
 	  <a class="active" href="">User account</a>
 	  <a href="">Feedback</a>
@@ -44,28 +43,28 @@
 	  <div class="box">
 	
 		<div class ="photo">
-			<img src = "images/user.jpg" width ="100%" height ="300px" id = "user">
+			<img src = "images/user2.png" width ="100%" height ="300px" id = "user">
 				<div class ="title">
-					<h2> Mahesh Silva</h2>
+					<h2> Tharaka Silva</h2>
 				</div>
 
 		</div>
 			<div >
 			
-				<p><i class="fa fa-envelope" aria-hidden="true"></i>
-				Maheshsilva@gmail.com</p>
+				<p><i class="fa fa-lock" aria-hidden="true"></i>
+				2345676343</p>
 			
 			
 				<p><i class="fa fa-home" aria-hidden="true"></i>
-				Colombo 5</p>
+				Colombo</p>
 			
 			
 				<p><i class="fa fa-phone" aria-hidden="true"></i>
 				0715304739</p>
 			
 		
-				<p><i class="fa fa-lock" aria-hidden="true"></i>
-				**********</p>
+				<p><i class="fa fa-location-arrow" aria-hidden="true"></i>
+				Nugegoda</p>
 			</div>
 		
 				<input type = "submit" id = "btn" value = "change" name= "">
@@ -75,39 +74,21 @@
 	
 	<div class ="box2">
 		<div class ="date">
-			<p>Date -  28/09/2020 </p>
-			<p>Amount - Rs.500.00</p>
+			<p>Account Number -  2345676343 </p>
+			<p>Delivery Date - 07/06/2022</p>
 		
-			<p>Payament method - Cash</p>
-			<p>Taxi type - Toyota Allion</p>
+			<p>Code - P15 </p>
+		    <p>Products - lanka Petrol 92</p>
+		    <p>No. Of Loads - 2</p>
+
+ 
 	</div>
 		
 		<div class ="map">
 			<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63389.13604668517!2d79.90149204244693!3d6.791622973694844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24f91d281cc5d%3A0xea4b2fcd3ce0e74e!2sPiliyandala!5e0!3m2!1sen!2slk!4v1565883909202!5m2!1sen!2slk" width="500" height="175" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 		</div><hr/>
-			
-			
-		<div class ="date">
-			<p>Date -  29/09/2020 </p>
-			<p>Amount - Rs.950.00</p>
-			<p>Payament method - Cash</p>
-			<p>Taxi type - TUK</p>
-		</div>
-		
-		<div class ="map">
-			<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63389.13604668517!2d79.90149204244693!3d6.791622973694844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae24f91d281cc5d%3A0xea4b2fcd3ce0e74e!2sPiliyandala!5e0!3m2!1sen!2slk!4v1565883909202!5m2!1sen!2slk" width="500" height="175" frameborder="0" style="border:0" allowfullscreen></iframe></p>
-		</div>
-	
-	
 	</div>
-
-
 </div>
-
-
-
-
-
 <footer class="footer">
     
 	<a href="https://google.com">Privacy Policy</a>&nbsp&nbsp		
