--- a/join.html
+++ b/join.html
@@ -5,6 +5,10 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="stylesheet" type="text/css" href="style/styles3.css">
 	  <link rel="stylesheet" type="text/css" href="style/styles4.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	 
@@ -15,7 +19,7 @@
 
 <div class="header">
    <div>
-	<img src="images/logo.png" alt="logo" class="logo">
+	<img src="images/name.png" alt="logo" class="logo">
 	</div>
 	<div class="buttons">
 	<button class="button">Login</button>
@@ -25,11 +29,10 @@
 	
 <div id="navbar">
       <a href="">Home</a>
-	  <a href="">Book a ride</a>
-      <a href="">Contact us</a>
+	  <a href="">Orders</a>
+      <a href="">Products</a>
 	  <a href="">About us</a>
-	  <a href="">Carriers</a>
-	  <a href="">Promo</a>
+	  <a href="">Contact Us</a>
 	  <a href="user account.html">User account</a>
 	  <a class="active" href="">Join with us</a>
 	  <a href="">Feedback</a>
@@ -37,37 +40,34 @@
 	  
 	 
 	  
-	  <img class="newimage" src="images/new.jpg">
+	  <img class="newimage" src="images/new.png">
 	  
 	  
 	  
 	  
 	  
 	  <form class="form" target="_self" method="POST" action="submitAddItems.php">
-      <center><h1>Join with us</h1></center></br>
-	  
-	  
-
-<input type="text"    placeholder="First Name" name="fname1" required><br></br>
-
-<input type="text"  placeholder="Last Name" name="lname1" required><br><br>
-
-
-<input type="text" placeholder="NIC no" name="nic1" required><br><br>
-
-
-
-<input type="text"    placeholder="Mobile no" name="mobileno1" required><br><br>
-
-Vehicle Details<br>
-<input type="text"    placeholder="Brand" name="brand1" required><br><br>
-<input type="text"    placeholder="Model" name="model" required><br><br>
-<input type="text"    placeholder="Vehicle No" name="vehicleno" required><br><br>
-
-    <br>
-<input type="submit" value="Register">
-
-</form>
+		
+			<div class="form-row">
+				
+			  <div class="form-group col-md-2 iconuser">
+				<span class="glyphicon glyphicon-user"></span>
+			  </div>
+			  <div class="form-group col-md-10">
+				<input type="password" class="form-control" id="inputPassword4">
+			  </div>
+			</div>
+			<div class="form-group col-md-2 iconuser">
+				<span class="glyphicon glyphicon-lock"></span>
+			  </div>
+			  <div class="form-group col-md-10">
+				<input type="password" class="form-control" id="inputPassword4">
+			  </div>
+			</div>
+			
+			
+			<button type="submit" class="btn btn-primary">Login</button>
+		  </form>
 
 
 <footer class="footer">
